--- a/stats/stat-server/src/main/resources/application.properties
+++ b/stats/stat-server/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
-spring.datasource.username=ignat
+spring.datasource.username=yanenko
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
