--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 server.port=8080
+stat-server.url=http://stat-server:9090
+
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=INFO
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
+
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
+spring.datasource.username=yanenko
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+hibernate.jdbc.time_zone=UTC
