Исправить зависимости в корневом и модульном pom

--- a/main-service/pom.xml
+++ b/main-service/pom.xml
@@ -52,24 +52,20 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>stat-client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.5.Final</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok-mapstruct-binding</artifactId>
-            <version>0.2.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
